# PrakshepOptimizationEngine

./: .gitignore  CONTRIBUTING.md  README.md  render.yaml  test_ws.py
.github/: ISSUES.md
api_server/: Dockerfile  config.py  main.py  requirements.txt
api_server/routers/: simulation.py  telemetry.py
api_server/services/: sim_manager.py  telemetry_broadcaster.py
cpp_engine/: CMakeLists.txt  pyproject.toml
cpp_engine/include/prakshep/: aerodynamics.hpp  atmosphere.hpp  constants.hpp  flight_computer.hpp  gravity.hpp  integrator.hpp  propulsion.hpp  rocket_config.hpp  simulation.hpp  types.hpp
cpp_engine/include/prakshep/core/: fairing_assembly.hpp  vehicle_assembler.hpp
cpp_engine/include/prakshep/guidance/: trajectory_math.hpp
cpp_engine/include/prakshep/physics/: environment.hpp  orbital_injection.hpp  wgs84_gravity.hpp
cpp_engine/include/prakshep/stages/: booster_module.hpp  pslv_stage_1.hpp  pslv_stage_2.hpp  pslv_stage_3.hpp  pslv_stage_4.hpp  pslv_strap_on.hpp  rocket_stage.hpp
cpp_engine/src/: aerodynamics.cpp  atmosphere.cpp  bindings.cpp  flight_computer.cpp  gravity.cpp  integrator.cpp  propulsion.cpp  rocket_config.cpp  simulation.cpp
cpp_engine/src/core/: fairing_assembly.cpp  vehicle_assembler.cpp
cpp_engine/src/guidance/: trajectory_math.cpp
cpp_engine/src/physics/: environment.cpp  orbital_injection.cpp  wgs84_gravity.cpp
cpp_engine/src/stages/: pslv_stage_1.cpp  pslv_stage_2.cpp  pslv_stage_3.cpp  pslv_stage_4.cpp  pslv_strap_on.cpp
cpp_engine/tests/: test_main.cpp
docs/paper/: prakshep_ieee_paper.aux  prakshep_ieee_paper.tex
frontend/: package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/3d/: RocketScene.tsx
frontend/src/components/map/: CesiumMap.tsx
ml_environment/: requirements.txt  reward_functions.py  rocket_env.py
ml_environment/agents/: ppo_agent.py
ml_environment/anomaly/: lstm_predictor.py
scripts/: generate_graphs.py  run_headless_test.py
webgpu_client/: package.json  vercel.json
webgpu_client/src/app/: page.tsx
webgpu_client/src/components/3d/: RocketScene.tsx
webgpu_client/src/components/control-room/: SetupPanel.tsx
webgpu_client/src/lib/: websocket.ts
webgpu_client/src/store/: telemetryStore.ts
(+9 files in other folders)
